<html>
<head><style type="text/css">body {font-size: smaller;}</style></head>
<body>
  <b>3.1.0</b>
    <ul>
      <li>Adds a menu option to undo to before mistake. Thanks @jlnordin!</li>
      <li>French translation updated. Thanks @Tubix!</li>
    </ul>
  <b>3.0.0</b>
  <ul>
    <li>New title screen with resume feature.</li>
    <li>Spectacular full App UI themes.</li>
    <li>New action buttons for undo and settings in game screen.</li>
    <li>New option for highlight notes that match a particular number when a cell is selected.</li>
    <li>Thanks @jlnordin for all new features!</li>
  </ul>
  <b>2.7.0</b>
  <ul>
    <li>Awesome Theme Preview. Thanks @jlnordin!</li>
    <li>Keep same values highlighted after empty cell selection. Thanks @ChrisLane!</li>
    <li>Hungarian translation. Thanks @madcrow!</li>
  </ul>
  <b>2.6.4</b>
  <ul><li>French translation updated. Thanks @Tubix!</li></ul>
  <b>2.6.3</b>
  <ul>
    <li>Adds a menu option to check if a puzzle is solvable when editing or adding a puzzle. Thanks
    @ssteve3424!</li>
  </ul>
  <b>2.6.2</b>
  <ul>
    <li>Solved import crash!</li>
    <li>Puzzle solver always work even if you made a mistake.</li>
    <li>Added a new option to get hints.</li>
    <li>Thanks @ssteve3424 for solver and hints!</li>
  </ul>
  <b>2.6.1</b>
  <ul><li>New adaptive icon!</li></ul>
  <b>2.6.0</b>
  <ul>
    <li>Added permission checks for reading/writing external storage.</li>
    <li>Added puzzle solver.</li>
    <li>Thanks @ssteve3424 for this contributions!</li>
  </ul>
  <b>2.5.2</b>
  <ul><li>Added chinese language. Thanks @kevinshq!</li></ul>
  <b>2.5.1</b>
  <ul>
    <li>Expose the settings menu everywhere. Thanks @bebehei!</li>
    <li>Updated german translation. Thanks @Stunkymonkey and @bebehei!</li>
  </ul>
  <b>2.5.0</b>
  <ul><li>Added new themes and custom theme settings. Thanks @spimanov!</li></ul>
  <b>2.4.4</b>
  <ul><li>Fixed export issue. Thanks @spimanov!</li></ul>
  <b>2.4.3</b>