@@ -316,4 +316,10 @@
     <!-- Strings added/changed in 3.1.0 -->
     <string name="undo_to_before_mistake">Deshacer a antes del error</string>
     <string name="undo_to_before_mistake_confirm">¿Seguro que quieres deshacer todas las acciones desde el último estado solucionable?</string>
+
+    <!-- Strings added/changed in 3.2.0 -->
+    <string name="remove_notes_summary">Eliminar automáticamente las anotaciones de la misma columna, fila y celda al ingresar un número</string>
+    <string name="remove_notes_title">Eliminar anotaciones al introducir un número</string>
+
+    <string name="create_from_single_color">Crear desde un solo color…</string>
 </resources>
