@@ -364,6 +364,9 @@
     <string name="undo_to_before_mistake">Undo to before mistake</string>
     <string name="undo_to_before_mistake_confirm">Are you sure you want to undo all actions since the last solvable state?</string>
 
+    <!-- Strings added/changed in 3.2.0 -->
     <string name="remove_notes_summary">Automatically remove notes from the same column, row, and box when entering a number</string>
-    <string name="remove_notes_title">Remove notes on entry</string>
+    <string name="remove_notes_title">Remove notes on number entry</string>
+
+    <string name="create_from_single_color">Create from single color…</string>
 </resources>
